infrastructure/goals-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goals-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goals
  template:
    metadata:
      labels:
        app: goals
    spec:
      containers:
        - name: goals
          image: veilhelmalex/golfin-goals
---
apiVersion: v1
kind: Service
metadata:
  name: goals-srv
spec:
  selector:
    app: goals
  ports:
    - name: goals
      protocol: TCP
      port: 3005
      targetPort: 3005
