infrastructure/login-user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-user
  template:
    metadata:
      labels:
        app: login-user
    spec:
      containers:
        - name: login-user
          image: veilhelmalex/golfin-login-user
---
apiVersion: v1
kind: Service
metadata:
  name: login-user-srv
spec:
  selector:
    app: login-user
  ports:
    - name: login-user
      protocol: TCP
      port: 3001
      targetPort: 3001
