infrastructure/totals-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: totals-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: totals
  template:
    metadata:
      labels:
        app: totals
    spec:
      containers:
        - name: totals
          image: veilhelmalex/golfin-totals
---
apiVersion: v1
kind: Service
metadata:
  name: totals-srv
spec:
  selector:
    app: totals
  ports:
    - name: totals
      protocol: TCP
      port: 3004
      targetPort: 3004
