infrastructure/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: golfin.veilhelmalexander.com
      http:
        paths:
          - path: /users/?(.*)
            backend:
              serviceName: register-user-srv
              servicePort: 3000
          - path: /login/?(.*)
            backend:
              serviceName: login-srv
              servicePort: 3001
          - path: /transaction/?(.*)
            backend:
              serviceName: transaction-srv
              servicePort: 3002
          - path: /query/?(.*)
            backend:
              serviceName: query-srv
              servicePort: 3003
          - path: /totals/?(.*)
            backend:
              serviceName: query-srv
              servicePort: 3004
          - path: /goals/?(.*)
            backend:
              serviceName: goals-srv
              servicePort: 3005
          - path: /events/?(.*)
            backend:
              serviceName: event-bus-srv
              servicePort: 3005
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 4000
